--- a/employeeDetails/employee_details.html
+++ b/employeeDetails/employee_details.html
@@ -10,6 +10,7 @@
             <button onclick="calculateTotalSalaries()">Calculate Total Salaries</button>
             <button onclick="displayHREmployees()">Display HR Employees</button>
             <button onclick="findEmployeeById(3)">Find Employee by ID 3x</button>
+            <button onclick="findbySpecialization('JavaScript')">Find by Specialization JavaScript</button>
         </div>
         <div id="employeesDetails"></div>
         <script src="./employee_details.js"></script>
