--- a/JavaScript/jspe-ex24-2Darray.html
+++ b/JavaScript/jspe-ex24-2Darray.html
@@ -11,10 +11,12 @@
             gap: 10px;
             justify-content: center;
             /* border: solid black; */
+            /* background-color: aqua; */
         }
 
         .seat {
             width: 70px;
+            /* padding: 1px; Does not help much */
             height: 40px;
             line-height: 40px;
             border: 1px solid #ccc;
@@ -33,6 +35,7 @@
         }
         
         .random-button {
+            /* border: black solid 1px; */
             display: grid;
             grid-template-columns: repeat();
             justify-content: center;
